# geger

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.txt
.github/: dependabot.yml
.github/workflows/: rust.yml
data/examples/strategy/: 1661214892.113.msg  1661218518.68.msg
data/test/: expected_events.json  test_md.json  test_sim_environment_md.json
data/test/sim_environment/: expected_events.json  md_multiple_symbols_exchanges.json  md_single_symbol.json
examples/: core_check.rs  strategy.rs
src/: lib.rs
src/common/: events.rs  log.rs  market_data.rs  mod.rs  order.rs  types.rs  uds.rs
src/core/: actions_context.rs  builder.rs  core.rs  engine.rs  event_loop.rs  events.rs  gateway_router.rs  market_data.rs  message_bus.rs  mod.rs  order.rs  types.rs
src/sim/: broker.rs  environment.rs  mod.rs
src/sim_broker/: broker.rs  broker_events.rs  mod.rs  order.rs
src/sim_environment/: mod.rs
src/sim_trading/: mod.rs
tests/: sim_environment.rs
