[package]
name = "geger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
crossbeam-channel = "0.5"
log = "^0.4.14"
log4rs = "^1.0.0"
rmp = "~0.8"
rmp-serde = "~0.15"
serde = { version = "^1.0.125", features = ["derive"] }
serde-value = "0.6"
serde-value-utils  = "0.1"
serde_gelf = "0.1"
serde_json = "^1.0.64"
serde_qs = "0.8"
serde_with = { version = "^1.9.1", features = ["chrono"] }
serde_yaml = "0.8"
json_comments = "0.2.0"